Prevent flash of the visible button
We need to remove this button altogether now that we have a layout switcher.

--- a/assets/css/scss/admin-views.scss
+++ b/assets/css/scss/admin-views.scss
@@ -353,7 +353,7 @@ $gv-overlay-index: 10000;
 }
 
 #gv_switch_view_button {
-	display: inline-block;
+	display: none!important;
 }
 
 #gravityview_select_template {
